Add data pattern

--- a/sprint/2/crime/fraud/index.html
+++ b/sprint/2/crime/fraud/index.html
@@ -278,9 +278,39 @@ title: "Fraud: year ending December 2017"
 
 
           <h2 id="data" class="margin-top--7">Fraud data</h2>
-            <p>This page mainly reports on data from the Crime Survey for England and Wales (CSEW) and the National Fraud Intelligence Bureau (NFIB), which collates data from Action Fraud, Cifas and UK Finance.</p>
+          <ul class="list--neutral padding-left--0">
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Additional tables on Fraud and Cybercrime</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
+              <p>Estimates from Crime Survey for England and Wales (CSEW) on fraud and computer misuse.</p>
+            </li>
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Appendix Tables</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
+              <p>Trends in Crime Survey for England and Wales (CSEW) crime experienced by adults and children aged 10 to15 and Home Office police recorded crime, by offence type.</p>
+            </li>
+          </ul>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
-          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
+
+          <details role="group" class="margin-bottom--4 margin-top--1">
+            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+              <span class="summary">More about the data used in this bulletin</span>
+            </summary>
+            <div class="panel" id="details-content-1" aria-hidden="false">
+              <p>Fraud data is provided by Action Fraud – the public-facing national fraud and cybercrime reporting centre, as well as two industry bodies, Cifas and UK Finance, who report instances of fraud where their member organisations have been a victim.</p>
+              <p>Further information on each of the Fraud data sources and the differences between them can be found in Section 5.4 of the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a> and also in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/overviewoffraudandcomputermisusestatisticsforenglandandwales/2018-01-25">Overview of fraud and computer misuse statistics article</a>.</p>
+            </div>
+          </details>
+
+
+
+
+
+
+
+          <!-- <p>This page mainly reports on data from the Crime Survey for England and Wales (CSEW) and the National Fraud Intelligence Bureau (NFIB), which collates data from Action Fraud, Cifas and UK Finance.</p>
+          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
+          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p> -->
 
           <h2 id="using-data" class="margin-top--7">Using fraud data</h2>
           <div class="js-show-hide">
