breadcrumb, contact and spacing

--- a/sprint/2/labour-market/summary-table/index.html
+++ b/sprint/2/labour-market/summary-table/index.html
@@ -21,16 +21,16 @@ title: "Labour market status by age group"
                   <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/">Home</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity">People, population and community</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity">Employment and labour market</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">Crime and justice</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">People in work</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../crime-overview">Crime</a>
+                  <a class="breadcrumb__link astral-link" href="../crime-overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Fraud
+                  Labour market status by age group
                 </li>
               </ol>
             </div>
@@ -87,8 +87,8 @@ title: "Labour market status by age group"
       <div class="col-wrap">
         <div class="col">
 
-          <!-- <h2 class="margin-top--3 margin-bottom--0">Labour market status by age group</h2> -->
-          <p class="font-xxsmall margin-top--4 margin-bottom--1">United Kingdom (thousands) seasonally adjusted</p>
+          <h2 class="margin-top--3 margin-bottom--0">Summary table</h2>
+          <p class="font-xxsmall margin-top--2 margin-bottom--1">United Kingdom (thousands) seasonally adjusted</p>
 
           <!-- <table class="table-v2 margin-top--2 margin-bottom--6">
             <tbody>
@@ -119,8 +119,8 @@ title: "Labour market status by age group"
         	 <table cellspacing=0 border=0 class="summary-table margin-bottom--4">
               <tbody>
             		<tr>
-            			<th style="border-bottom:none"></th>
-            			<th style="border-bottom:none"></th>
+            			<th style="border-bottom:none;"></th>
+            			<th style="border-bottom:none;"></th>
             			<th colspan="8" class="align-center header-border">Aged 16 and over</th>
                   <th style="width:5px; border-bottom:none"></th>
             			<th colspan="8" class="align-center header-border">Aged 16-64</th>
@@ -161,6 +161,9 @@ title: "Labour market status by age group"
             			<td class="header-border">Level</td>
             			<td class="header-border">Rate</td>
             		</tr>
+                <!-- <tr>
+                  <td colspan="19" class="header-border">&nbsp;</td>
+                </tr> -->
             		<tr>
             			<td>People</td>
             			<td></td>
@@ -862,11 +865,24 @@ title: "Labour market status by age group"
 
             <p class="font-xsmall">Source: Labour Force Survey</p>
             <h5 class="margin-bottom--1">Download this table</h5>
-            <div class="btn-group margin-bottom--4">
+            <div class="btn-group">
               <a class="btn btn--primary font-xsmall link--no-underline" href="#">
                     .XLS
                 </a>
             </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col col--md-two-thirds col--lg-two-thirds">
+          <!-- contact -->
+          <h2 id="contact" class="margin-top--7">Contact us</h2>
+          <div class="content-box">
+            <p class="margin-top--4">John Brown<br>
+              <a href="#">labour.market@ons.gsi.gov.uk</a><br>+44 (0)2075 928689</p>
+          </div>
         </div>
       </div>
     </div>
