Add notes to table

--- a/sprint/2/labour-market/summary-table/index.html
+++ b/sprint/2/labour-market/summary-table/index.html
@@ -864,6 +864,11 @@ title: "Labour market status by age group"
             <!-- end of table -->
 
             <p class="font-xsmall">Source: Labour Force Survey</p>
+            <p class="heading-xsmall list-heading">Notes:</p>
+            <ul>
+              <li class="font-xsmall margin-bottom--1">Id id commodo mollit esse duis et Lorem eu ad laboris ipsum sint proident quis sunt ea.</li>
+              <li class="font-xsmall margin-bottom--1">Proident deserunt aliquip culpa officia esse cupidatat qui enim culpa elit in nisi nulla velit eiusmod.</li>
+            </ul>
             <h5 class="margin-bottom--1">Download this table</h5>
             <div class="btn-group">
               <a class="btn btn--primary font-xsmall link--no-underline" href="#">
