--- a/sprint/2/labour-market/employment/index.html
+++ b/sprint/2/labour-market/employment/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Fraud: year ending December 2017"
+title: "Employment: August 2018"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -18,10 +18,19 @@ title: "Fraud: year ending December 2017"
             <div class="breadcrumb">
               <ol class="breadcrumb__list margin-bottom--0">
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../collection">Crime collection: year ending December 2017</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/">Home</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity">Employment and labour market</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">People in work</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="../overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Fraud
+                  Employment: August 2018
                 </li>
               </ol>
             </div>
@@ -38,7 +47,7 @@ title: "Fraud: year ending December 2017"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Attempted fraud and fraud offences involving a loss in England and Wales. Including cyber crime, computer misuse, false accounting, and banking fraud.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Estimates of employment for the UK.</p>
         </div>
       </div>
     </div>
@@ -59,13 +68,13 @@ title: "Fraud: year ending December 2017"
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release date: 26 April 2018</p>
+            <p class="font-xxsmall">Release date: 14 August 2018</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release frequency: Quarterly</p>
+            <p class="font-xxsmall">Release frequency: Monthly</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall" style="border-right:0;">Next release: September 2018 (provisional)</p>
+            <p class="font-xxsmall" style="border-right:0;">Next release: 11 September 2018</p>
           </div>
         </div>
       </div>
