Grey box content

--- a/sprint/2/labour-market/employment/index.html
+++ b/sprint/2/labour-market/employment/index.html
@@ -86,8 +86,8 @@ title: "Employment: August 2018"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <h2>No change in fraud offences in the last year, following four years of rises</h2>
-          <p class="font-xsmall">England and Wales, year ending March 2012 to year ending December 2017</p>
+          <h2>People in work shows steady increase</h2>
+          <p class="font-xsmall">UK employment rate, January to March 1971 to April to June 2018, seasonally adjusted</p>
         </div>
       </div>
     </div>
@@ -97,13 +97,13 @@ title: "Employment: August 2018"
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-right--2 padding-bottom--0 padding-left--2 padding-top--4">
             <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-lg.png" | relative_url }}" class="margin-bottom--3" alt="">
-            <p class="font-xxsmall margin-bottom--3">Source: Action Fraud, National Fraud Intelligence Bureau (NFIB)</p>
+            <p class="font-xxsmall margin-bottom--3">Source: Labour Force Survey, Office for National Statistics</p>
           </div>
         </div>
         <div class="col col--md-one-third col--lg-one-third padding-left-md--3">
           <ul>
-            <li>Over half (1.8 million) of fraud incidents were cyber-related</li>
-            <li>Less than one-fifth of fraud incidents are reported</li>
+            <li>Lowest employment rate was 65.6% in 1983</li>
+            <li>The employment rate for April to June 2018 was 75.6%</li>
           </ul>
         </div>
       </div>
@@ -116,9 +116,6 @@ title: "Employment: August 2018"
       <div class="col-wrap">
         <!-- sticky nav -->
         <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
-          <div class="icon-box-small margin-top--3">
-            <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../collection">Return to collection page</a></p>
-          </div>
           <div class="">
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
