--- a/sprint/2/labour-market/employment/index.html
+++ b/sprint/2/labour-market/employment/index.html
@@ -335,13 +335,13 @@ title: "Employment: August 2018"
           <h2 id="more-links" class="margin-top--7">You may also be interested in</h2>
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
-              <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/labourmarketeconomiccommentary/latest">Labour market economic commentary</a></li>
-              <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/singlemonthlabourforcesurveyestimates/august2018">Single month Labour Force Survey estimates</a></li>
+              <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/regionallabourmarket/latest">Regional Labour market statistics release</a></li>
+              <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/publicsectorpersonnel/bulletins/publicsectoremployment/latest">Public sector employment release</a></li>
+              <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/bulletins/youngpeoplenotineducationemploymentortrainingneet/august2018">Young People not in Education, Employment or Training (NEET) release</a></li>
+              <li class=""><a class="font-weight--bold" href="https://www.bankofengland.co.uk/statistics/research-datasets"> A millennium of macroeconomic data version 3.1</a></li>
+              <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/trendsinselfemploymentintheuk/2018-02-07">Trends in self-employment in the UK</a></li>
             </ul>
           </div>
-
-
-
 
           <!-- contact -->
           <h2 id="contact" class="margin-top--7">Contact us</h2>
