--- a/sprint/2/labour-market/overview/index.html
+++ b/sprint/2/labour-market/overview/index.html
@@ -109,17 +109,14 @@ title: "Labour market overview: year ending December 2017"
       <div class="col-wrap">
         <!-- sticky nav -->
         <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
-          <div class="icon-box-small margin-top--3">
-            <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../collection">Return to collection page</a></p>
-          </div>
           <div class="">
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#analysis">Analysis of crime</a>
+                <a href="#analysis">Analysis of labour market</a>
               </li>
               <li>
-                <a href="#data">Crime data</a>
+                <a href="#data">Labour market data</a>
               </li>
               <li>
                 <a href="#using-data">How do we measure this?</a>
@@ -134,7 +131,10 @@ title: "Labour market overview: year ending December 2017"
                 <a href="#more-pages">More pages in this collection</a>
               </li>
               <li>
-                <a href="#more-about">More about crime</a>
+                <a href="#more-about">More about labour market</a>
+              </li>
+              <li>
+                <a href="#more-links">You may also be interested in</a>
               </li>
               <li>
                 <a href="#contact">Contact us</a>
@@ -144,19 +144,16 @@ title: "Labour market overview: year ending December 2017"
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
             <ul class="section-contents">
               <li>
-                <a class="font-weight--bold" href="../crime-overview">Crime overview</a>
+                <a class="font-weight--bold" href="../overview">Labour market overview</a>
               </li>
               <li>
-                <a href="../fraud">Fraud</a>
+                <a href="../employment">Employment</a>
               </li>
               <li>
-                <a href="../homicide">Homicide</a>
+                <a href="../unemployment">Unemplyment</a>
               </li>
               <li>
-                <a href="../violent-crime">Violent crime</a>
-              </li>
-              <li>
-                <a href="../weapons-crime">Weapons crime</a>
+                <a href="../average-weekly-earnings">Average weekly earnings</a>
               </li>
             </ul>
           </div>
