--- a/sprint/2/labour-market/unemployment/index.html
+++ b/sprint/2/labour-market/unemployment/index.html
@@ -120,10 +120,10 @@ title: "Employment: August 2018"
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#analysis">Analysis of fraud</a>
+                <a href="#analysis">Analysis of unemployment</a>
               </li>
               <li>
-                <a href="#data">Fraud data</a>
+                <a href="#data">Unmployment data</a>
               </li>
               <li>
                 <a href="#using-data">How do we measure this?</a>
@@ -138,7 +138,10 @@ title: "Employment: August 2018"
                 <a href="#more-pages">More pages in this collection</a>
               </li>
               <li>
-                <a href="#more-about">More about fraud</a>
+                <a href="#more-about">More about unmployment</a>
+              </li>
+              <li>
+                <a href="#more-links">You may also be interested in</a>
               </li>
               <li>
                 <a href="#contact">Contact us</a>
@@ -148,19 +151,16 @@ title: "Employment: August 2018"
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
             <ul class="section-contents">
               <li>
-                <a href="../crime-overview">Crime overview</a>
+                <a href="../overview">Labour market overview</a>
               </li>
               <li>
-                <a class="font-weight--bold" href="../fraud">Fraud</a>
+                <a href="../employment">Employment</a>
               </li>
               <li>
-                <a href="../homicide">Homicide</a>
+                <a class="font-weight--bold" href="../unemployment">Unemplyment</a>
               </li>
               <li>
-                <a href="../violent-crime">Violent crime</a>
-              </li>
-              <li>
-                <a href="../weapons-crime">Weapons crime</a>
+                <a href="../average-weekly-earnings">Average weekly earnings</a>
               </li>
             </ul>
           </div>
