--- a/sprint/2/labour-market/employment/index.html
+++ b/sprint/2/labour-market/employment/index.html
@@ -346,8 +346,8 @@ title: "Employment: August 2018"
           <!-- contact -->
           <h2 id="contact" class="margin-top--7">Contact us</h2>
           <div class="content-box">
-            <p class="margin-top--4">Mark Bangs<br>
-              <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
+            <p class="margin-top--4">Richard Clegg<br>
+              <a href="#">labour.market@ons.gov.uk</a><br>+44 (0)1633 455400</p>
           </div>
 
           <p class="margin-top--7">
