--- a/sprint/2/labour-market/unemployment/index.html
+++ b/sprint/2/labour-market/unemployment/index.html
@@ -158,7 +158,7 @@ title: "Unmployment: August 2018"
                 <a href="../employment">Employment</a>
               </li>
               <li>
-                <a class="font-weight--bold" href="../unemployment">Unemplyment</a>
+                <a class="font-weight--bold" href="../unemployment">Unemployment</a>
               </li>
               <li>
                 <a href="../average-weekly-earnings">Average weekly earnings</a>
