--- a/sprint/2/labour-market/average-weekly-earnings/index.html
+++ b/sprint/2/labour-market/average-weekly-earnings/index.html
@@ -123,7 +123,7 @@ title: "Employment: August 2018"
                 <a href="#analysis">Analysis of average week earnings</a>
               </li>
               <li>
-                <a href="#data">Average week earnings data</a>
+                <a href="#data">Average weekly earnings data</a>
               </li>
               <li>
                 <a href="#using-data">How do we measure this?</a>
@@ -138,7 +138,7 @@ title: "Employment: August 2018"
                 <a href="#more-pages">More pages in this collection</a>
               </li>
               <li>
-                <a href="#more-about">More about average week earnings</a>
+                <a href="#more-about">More about average weekly earnings</a>
               </li>
               <li>
                 <a href="#more-links">You may also be interested in</a>
