latest banner content

--- a/sprint/2/labour-market/average-weekly-earnings/index.html
+++ b/sprint/2/labour-market/average-weekly-earnings/index.html
@@ -57,7 +57,7 @@ title: "Average weekly earnings: August 2018"
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
-            <p class="panel panel-small background--0"><span class="font-weight--bold font-xsmall">This page is part of the latest crime collection</span></p>
+            <p class="panel panel-small background--0"><span class="font-weight--bold font-xsmall">This page is part of the latest labour market collection</span></p>
           </div>
         </div>
       </div>
