--- a/sprint/2/labour-market/overview/index.html
+++ b/sprint/2/labour-market/overview/index.html
@@ -184,69 +184,101 @@ title: "Labour market: August 2018"
           </div>
 
           <p class="heading-small">Table 1: Summary of labour market statistics for April to June 2018, seasonally adjusted</p>
-          <table class="table-v2 margin-top--2 margin-bottom--4">
+
+          <table class="table-v2">
             <tbody>
-              <tr>
-                <td>England and Wales</td>
-                <td colspan="4" scope="row" style="text-align: right;">Adults aged 16 and over</td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1"></tr>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-2">
+                <td style="white-space:pre-wrap;border-top:thin solid black;border-bottom:thin solid black;font-weight:bold;color: black; ">&nbsp;</td>
+                <th scope="row" style="white-space:pre-wrap;text-align:right;border-top:thin solid black;border-bottom:thin solid black;color: black; ">Number (thousands)</th>
+                <th scope="row" style="white-space:pre-wrap;text-align:right;border-top:thin solid black;border-bottom:thin solid black;color: black; ">Change on Jan to Mar 2018</th>
+                <th scope="row" style="white-space:pre-wrap;text-align:right;border-top:thin solid black;border-bottom:thin solid black;color: black; ">Change on Apr to Jun 2017</th>
+                <th scope="row" style="white-space:pre-wrap;text-align:right;border-top:thin solid black;border-bottom:thin solid black;color: black; ">Headline Rate (%)</th>
+                <th scope="row" style="white-space:pre-wrap;text-align:right;border-top:thin solid black;border-bottom:thin solid black;color: black; ">Change on Jan to Mar 2018</th>
+                <th scope="row" style="white-space:pre-wrap;text-align:right;border-top:thin solid black;border-bottom:thin solid black;color: black; ">Change on Apr to Jun 2017</th>
               </tr>
-              <tr>
-                <th>Offence group</th>
-                <th class="cell--align-right">Jan '16</br> to
-                  Dec '16</th>
-                <th class="cell--align-right">Jan '17</br>to
-                  Dec '17</th>
-                <th class="cell--align-right">Percentage change</br>
-                  and significance</th>
-                <th class="cell--align-right"></th>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;">Employed</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">32,386</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">42</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">313</td>
+                <td style="white-space:pre-wrap;text-align:right;">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;">&nbsp;</td>
               </tr>
-              <tr>
-                <th colspan="3" scope="row" style="text-align: right; border-bottom: 1px solid #D0D2D3;">Number of incidents (thousands)</th>
-                <td></td>
-                <td></td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;color: black; ">Aged 16 to 64 </td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">31,154</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">7</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">249</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">75.6</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">0.0</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">0.4</td>
               </tr>
-              <tr>
-                <td>Fraud</td>
-                <td class="cell--align-right">3,480</td>
-                <td class="cell--align-right">3,241</td>
-                <td class="cell--align-right">-7</td>
-                <td class="cell--align-right"></td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;border-bottom:thin solid black;color: black; ">Aged 65 and over</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">1,231</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">35</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">64</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">&nbsp;</td>
               </tr>
-              <tr>
-                <td>&nbsp; &nbsp; Bank and credit account fraud</td>
-                <td class="cell--align-right">2,454</td>
-                <td class="cell--align-right">2,332</td>
-                <td class="cell--align-right">-5</td>
-                <td class="cell--align-right"></td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;border-top:thin solid black;">Unemployed</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">1,360</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">-65</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">-124</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">4.0</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">-0.2</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">-0.4</td>
               </tr>
-              <tr>
-                <td>Consumer and retail fraud</td>
-                <td class="cell--align-right">827</td>
-                <td class="cell--align-right">813</td>
-                <td class="cell--align-right">-2</td>
-                <td class="cell--align-right"></td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;color: black; ">Aged 16 to 64 </td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">1,343</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">-60</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">-122</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">&nbsp;</td>
               </tr>
-              <tr>
-                <td>&nbsp; &nbsp;Advance fee fraud</td>
-                <td class="cell--align-right">102</td>
-                <td class="cell--align-right">61</td>
-                <td class="cell--align-right">-41</td>
-                <td class="cell--align-right"></td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;border-bottom:thin solid black;color: black; ">Aged 65 and over</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">17</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">-5</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">-2</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">&nbsp;</td>
               </tr>
-              <tr>
-                <td>&nbsp; &nbsp;Other fraud</td>
-                <td class="cell--align-right">97</td>
-                <td class="cell--align-right">35</td>
-                <td class="cell--align-right">-64</td>
-                <td class="cell--align-right">*</td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;border-top:thin solid black;">Inactive</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">19,298</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">99</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">115</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-top:thin solid black;color: black; ">&nbsp;</td>
               </tr>
-              <tr>
-                <td>Unweighted base - number of adults</td>
-                <td class="cell--align-right">17,500</td>
-                <td class="cell--align-right">20,974	</td>
-                <td class="cell--align-right"></td>
-                <td class="cell--align-right"></td>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;color: black; ">Aged 16 to 64 </td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">8,735</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">77</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">-31</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">21.2</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">0.2</td>
+                <td style="white-space:pre-wrap;text-align:right;color: black; ">-0.1</td>
               </tr>
+              <tr class="r-21b30b64-3bd4-497e-adb7-463bbc79f15c-1">
+                <td style="white-space:pre-wrap;text-align:left;border-bottom:thin solid black;color: black; ">Aged 65 and over</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">10,564</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">22</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;color: black; ">146</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;">&nbsp;</td>
+                <td style="white-space:pre-wrap;text-align:right;border-bottom:thin solid black;">&nbsp;</td>
+              </tr>
+
             </tbody>
           </table>
 
