--- a/sprint/2/labour-market/summary-table/index.html
+++ b/sprint/2/labour-market/summary-table/index.html
@@ -21,13 +21,13 @@ title: "Labour market status by age group"
                   <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/">Home</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity">Employment and labour market</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/employmentandlabourmarket">Employment and labour market</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">People in work</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork">People in work</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../crime-overview">Labour market</a>
+                  <a class="breadcrumb__link astral-link" href="../overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
                   Labour market status by age group
