--- a/sprint/2/labour-market/unemployment/index.html
+++ b/sprint/2/labour-market/unemployment/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Unmployment: August 2018"
+title: "Unemployment: August 2018"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -21,10 +21,10 @@ title: "Unmployment: August 2018"
                   <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/">Home</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity">Employment and labour market</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/employmentandlabourmarket">Employment and labour market</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">People in work</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork">People in work</a>
                 </li>
                 <li class="breadcrumb__item__white">
                   <a class="breadcrumb__link astral-link" href="../overview">Labour market</a>
