--- a/sprint/2/labour-market/unemployment/index.html
+++ b/sprint/2/labour-market/unemployment/index.html
@@ -216,8 +216,8 @@ title: "Unemployment: August 2018"
             <li>356,000 people who had been unemployed for over one year, 18,000 fewer than for a year earlier</li>
           </ul>
 
-          <h2 id="data" class="margin-top--7">Unmployment data</h2>
-          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
+          <h2 id="data" class="margin-top--7">Unemployment data</h2>
+          <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">Where to find data about unemployment</span>
