--- a/sprint/2/labour-market/average-weekly-earnings/index.html
+++ b/sprint/2/labour-market/average-weekly-earnings/index.html
@@ -163,6 +163,30 @@ title: "Average weekly earnings: August 2018"
               <li>
                 <a class="font-weight--bold" href="../average-weekly-earnings">Average weekly earnings</a>
               </li>
+              <li>
+                <a href="">Public and private sector employment</a>
+              </li>
+              <li>
+                <a href="">Actual hours worked</a>
+              </li>
+              <li>
+                <a href="">Workforce jobs</a>
+              </li>
+              <li>
+                <a href="">Labour disputes</a>
+              </li>
+              <li>
+                <a href="">Economic inactivity</a>
+              </li>
+              <li>
+                <a href="">Young people in the labour market</a>
+              </li>
+              <li>
+                <a href="">Redundancies</a>
+              </li>
+              <li>
+                <a href="">Vacancies</a>
+              </li>
             </ul>
           </div>
         </div>
