Fix styling issue for left hand nav links

--- a/sprint/2/labour-market/unemployment/index.html
+++ b/sprint/2/labour-market/unemployment/index.html
@@ -164,28 +164,28 @@ title: "Unemployment: August 2018"
                 <a href="../average-weekly-earnings">Average weekly earnings</a>
               </li>
               <li>
-                <a href="">Public and private sector employment</a>
+                <a href="#">Public and private sector employment</a>
               </li>
               <li>
-                <a href="">Actual hours worked</a>
+                <a href="#">Actual hours worked</a>
               </li>
               <li>
-                <a href="">Workforce jobs</a>
+                <a href="#">Workforce jobs</a>
               </li>
               <li>
-                <a href="">Labour disputes</a>
+                <a href="#">Labour disputes</a>
               </li>
               <li>
-                <a href="">Economic inactivity</a>
+                <a href="#">Economic inactivity</a>
               </li>
               <li>
-                <a href="">Young people in the labour market</a>
+                <a href="#">Young people in the labour market</a>
               </li>
               <li>
-                <a href="">Redundancies</a>
+                <a href="#">Redundancies</a>
               </li>
               <li>
-                <a href="">Vacancies</a>
+                <a href="#">Vacancies</a>
               </li>
             </ul>
           </div>
