Remove date range from title and include in sub title

--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Average weekly earnings: August 2018"
+title: "Average weekly earnings"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -30,7 +30,7 @@ title: "Average weekly earnings: August 2018"
                   <a class="breadcrumb__link astral-link" href="../overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Average weekly earnings: August 2018
+                  Average weekly earnings
                 </li>
               </ol>
             </div>
@@ -47,7 +47,7 @@ title: "Average weekly earnings: August 2018"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Money paid per week, per job to employees in Great Britain in return for work done.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Money paid per week, per job to employees in Great Britain in return for work done covering April to June 2018.</p>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@ title: "Average weekly earnings: August 2018"
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
-            <p class="panel panel-small background--0"><span class="font-weight--bold font-xsmall">This page is part of the latest labour market collection</span></p>
+            <p class="panel panel-small background--0 font-xsmall"><span class="font-weight--bold">This page is not part of the latest labour market collection</span><span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest labour market collection</a></p>
           </div>
         </div>
       </div>
