--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Employment: August 2018"
+title: "Employment"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -30,7 +30,7 @@ title: "Employment: August 2018"
                   <a class="breadcrumb__link astral-link" href="../overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Employment: August 2018
+                  Employment
                 </li>
               </ol>
             </div>
@@ -47,13 +47,13 @@ title: "Employment: August 2018"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Estimates of employment for the UK.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of employment for the UK covering April to June 2018.</p>
         </div>
       </div>
     </div>
 
     <!-- latest panel  -->
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
@@ -61,7 +61,7 @@ title: "Employment: August 2018"
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- release information -->
     <div class=" border-top--darkastral background--astraldark-transparent">
