--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -83,7 +83,7 @@ title: "Labour market: August 2018"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <h2>Numbers of people in employment increases</h2>
+          <h2>Number of people in employment increases</h2>
           <p class="font-xsmall">April to June 2018, seasonally adjusted</p>
         </div>
       </div>
