--- a/prototypes.html
+++ b/prototypes.html
@@ -13,7 +13,18 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
-      <h2 class="margin-bottom--0">Sprint 2 - latest</h2>
+      <h2 class="margin-bottom--0">Sprint 3 - latest</h2>
+      <p>13 September 2018 to 26 September</p>
+
+      <h3>Labour market</h3>
+      <ul>
+        <li><a href="sprint/3/labour-market/overview">Labour market overview</a></li>
+        <li><a href="sprint/3/labour-market/employment">Employment</a></li>
+        <li><a href="sprint/3/labour-market/unemployment">Unemployment</a></li>
+        <li><a href="sprint/3/labour-market/average-weekly-earnings">Avergare weekly earnings</a></li>
+      </ul>
+
+      <h2 class="margin-bottom--0">Sprint 2</h2>
       <p>30 August 2018 to 12 September 2018</p>
 
       <h3>Crime</h3>
@@ -26,6 +37,12 @@ footer: false
       </ul>
 
       <h3>Labour market</h3>
+      <ul>
+        <li><a href="sprint/2/labour-market/overview">Labour market overview</a></li>
+        <li><a href="sprint/2/labour-market/employment">Employment</a></li>
+        <li><a href="sprint/2/labour-market/unemployment">Unemployment</a></li>
+        <li><a href="sprint/2/labour-market/average-weekly-earnings">Avergare weekly earnings</a></li>
+      </ul>
 
       <h2 class="margin-bottom--0">Sprint 1</h2>
       <p>16 August 2018 to 29 August 2018</p></h2>
